tests/baselines/reference/typeParametersInStaticMethods.errors.txt
==== tests/cases/compiler/typeParametersInStaticMethods.ts (2 errors) ====
    class foo<T> {
        static M(x: (x: T) => { x: { y: T } }) {
                        ~
!!! error TS2099: Static members cannot reference class type parameters.
                                        ~
!!! error TS2099: Static members cannot reference class type parameters.
        }
    } 